fix: remove scrollbar

--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,6 @@ main{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
     gap: 2em;
-    overflow-y: scroll;
 }
 .card{
     background-color: var(--color-blush);
